[package]
name = "spawn-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
jemallocator = "0.5.0"
num_cpus = "1.13.1"
tokio = { version = "1.19", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
